--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,8 +22,7 @@ p{
   text-align: center;
 }
 body {
-color: #fff;
-background: #63738a;
+background: #efefef;
 font-family: 'Roboto', sans-serif;
 
 }
